--- a/typescript-version/full-version/.env.example
+++ b/typescript-version/full-version/.env.example
@@ -10,7 +10,7 @@ NEXT_PUBLIC_DOCS_URL=http://localhost:3001
 # -----------------------------------------------------------------------------
 NEXTAUTH_BASEPATH=${BASEPATH}/api/auth
 NEXTAUTH_URL=http://localhost:3000${BASEPATH}/api/auth
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET==aGVsbG8=
 
 # Google OAuth 2.0 (https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=
