--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ docker_push:
   variables:
     IMAGE_NAME: meal-provider-frontend
     TAG: $CI_COMMIT_SHA
+    FULL_IMAGE_PATH: ${CTR_REGISTRY_HOST}/${PROJECT_ID}/${REPOSITORY}/${IMAGE_NAME}:${TAG}
   before_script:
     # Decode and save the service account key file
     - echo $GCLOUD_SERVICE_KEY | base64 --decode -i > ${CI_PROJECT_DIR}/gcloud-service-key.json
@@ -19,4 +20,6 @@ docker_push:
     # Configure Docker to use Google Artifact Registry
     - gcloud auth configure-docker ${CTR_REGISTRY_HOST}
   script:
-    - docker push ${CTR_REGISTRY_HOST}/${PROJECT_ID}/${REPOSITORY}/${IMAGE_NAME}:${TAG}
+    - docker pull alpine:latest
+    - docker tag alpine:latest ${FULL_IMAGE_PATH}
+    - docker push ${FULL_IMAGE_PATH}
