--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,10 @@ access-service:
     - docker:dind # necessary for docker run
     - tutum/wordpress:latest
   variables:
+    # these values may need to be different if using TLS, k8s, etc.
+    # You can alternatively set defaults in your runner config
+    DOCKER_TLS_CERTDIR: ""
+    DOCKER_HOST: "tcp://docker:2375"
     FF_NETWORK_PER_BUILD: "true" # activate container-to-container networking
   script: |
     docker run --rm --name curl \
