--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,15 +11,15 @@ docker_push:
     IMAGE_NAME: meal-provider-frontend
     TAG: $CI_COMMIT_SHA
     FULL_IMAGE_PATH: ${CTR_REGISTRY_HOST}/${PROJECT_ID}/${REPOSITORY}/${IMAGE_NAME}:${TAG}
-  before_script:
-    - curl -sSL https://sdk.cloud.google.com | bash
-    # Decode and save the service account key file
-    - echo $GCLOUD_SERVICE_KEY | base64 --decode -i > ${CI_PROJECT_DIR}/gcloud-service-key.json
-    # Authenticate with Google Cloud
-    - gcloud auth activate-service-account --key-file=${CI_PROJECT_DIR}/gcloud-service-key.json
-    - gcloud --quiet config set project $PROJECT_ID
-    # Configure Docker to use Google Artifact Registry
-    - gcloud auth configure-docker ${CTR_REGISTRY_HOST}
+  # before_script:
+  #   - curl -sSL https://sdk.cloud.google.com | bash
+  #   # Decode and save the service account key file
+  #   - echo $GCLOUD_SERVICE_KEY | base64 --decode -i > ${CI_PROJECT_DIR}/gcloud-service-key.json
+  #   # Authenticate with Google Cloud
+  #   - gcloud auth activate-service-account --key-file=${CI_PROJECT_DIR}/gcloud-service-key.json
+  #   - gcloud --quiet config set project $PROJECT_ID
+  #   # Configure Docker to use Google Artifact Registry
+  #   - gcloud auth configure-docker ${CTR_REGISTRY_HOST}
   script:
     - docker --version
     - docker pull alpine:latest
