--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,9 @@ variables:
 
 build:
   stage: build
+  tags:
+    - docker
+    - cn
   script:
     - docker build -t my-docker-image .
     - docker run my-docker-image /script/to/run/tests
