CI: docker test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,5 +60,4 @@ build:
     - docker
     - cn
   script:
-    - docker build -t my-docker-image .
-    - docker run my-docker-image /script/to/run/tests
+    - docker pull alpine:latest
