--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ docker_push:
     FULL_IMAGE_PATH: ${CTR_REGISTRY_HOST}/${PROJECT_ID}/${REPOSITORY}/${IMAGE_NAME}:${TAG}
   before_script:
     - apk add --no-cache curl bash
+    - apk add --no-cache python3
     - curl -sSL https://sdk.cloud.google.com | bash
     # # Decode and save the service account key file
     # - echo $GCLOUD_SERVICE_KEY | base64 --decode -i > ${CI_PROJECT_DIR}/gcloud-service-key.json
