--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ docker_push:
   variables:
     IMAGE_NAME: meal-provider-frontend
     TAG: $CI_COMMIT_SHA
-    FULL_IMAGE_PATH: ${CTR_REGISTRY_HOST}/${PROJECT_ID}/${REPOSITORY}/${IMAGE_NAME}:${TAG}
+    FULL_IMAGE_PATH: ${CTR_REGISTRY_HOST}/${PROJECT_ID}/${CTR_REPOSITORY}/${IMAGE_NAME}:${TAG}
   before_script:
     # - apk add --no-cache curl bash
     # - apk add --no-cache python3
