--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,6 @@ docker_push:
     - echo $GCLOUD_SERVICE_KEY | base64 -d -i | docker login -u _json_key --password-stdin ${CTR_REGISTRY_HOST}
   script:
     - docker info
-    - echo $GCLOUD_SERVICE_KEY | base64 -d -i | docker login -u _json_key --password-stdin ${CTR_REGISTRY_HOST}
     - docker build -t ${FULL_IMAGE_PATH} .
     - docker push ${FULL_IMAGE_PATH}
 
@@ -42,6 +41,7 @@ kubernetes_deploy:
   script:
     - kubectl version --client
     - kubectl get service --kubeconfig $KUBECONFIG_KARMADA_API_SERVER
+    - envsubst < ./deploy/frontend-deploy.yaml.tmpl > ./deploy/frontend-deploy.yaml
     - |
       for file in ./deploy/*.yaml; do
         kubectl apply -f "$file" --kubeconfig $KUBECONFIG_KARMADA_API_SERVER
