--- a/deploy/frontend-service.yaml
+++ b/deploy/frontend-service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: whoami-service
+  name: frontend-service
   annotations:
     io.cilium/global-service: "true"
     io.cilium/service-affinity: "local"
 spec:
   selector:
-    app: whoami
+    app: frontend
   ports:
-  - name: http
-    port: 80
-    targetPort: 80
+    - name: http
+      port: 80
+      targetPort: 80
   type: ClusterIP
