--- a/deploy/propagationpolicy.yaml
+++ b/deploy/propagationpolicy.yaml
@@ -1,18 +1,18 @@
 apiVersion: policy.karmada.io/v1alpha1
 kind: PropagationPolicy
 metadata:
-  name: whoami-propagation
+  name: frontend-propagation
 spec:
   resourceSelectors:
     - apiVersion: apps/v1
       kind: Deployment
-      name: whoami-deployment
+      name: frontend-deployment
     - apiVersion: v1
       kind: Service
-      name: whoami-service
+      name: frontend-service
     - apiVersion: gateway.networking.k8s.io/v1
       kind: HTTPRoute
-      name: http-whoami
+      name: http-frontend
   placement:
     clusterAffinity:
       clusterNames:
