--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@iconify/tools": "^4.0.2",
     "@iconify/types": "^2.0.0",
     "@iconify/utils": "^2.1.22",
+    "@kubernetes/client-node": "^0.21.0",
     "@mui/lab": "5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/material-nextjs": "^5.15.11",
@@ -48,6 +49,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "express": "^4.19.2",
     "kbar": "0.1.0-beta.45",
     "keen-slider": "^6.8.6",
     "negotiator": "^0.6.3",
@@ -82,5 +84,8 @@
   },
   "prisma": {
     "schema": "./src/prisma/schema.prisma"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
