--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apexcharts": "^3.47.0",
     "autoprefixer": "^10.4.19",
     "bootstrap-icons": "^1.11.3",
+    "build": "^0.1.4",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.1",
