--- a/deploy/frontend-deploy.yaml
+++ b/deploy/frontend-deploy.yaml
@@ -17,3 +17,6 @@ spec:
           image: test
           ports:
             - containerPort: 80
+          env:
+            - name: DB_HOST
+              value: frontend-service
